--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
 		"svelte-check": "^4.3.6",
 		"typescript": "^5.9.3",
 		"vite": "^7.3.1"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.2.0",
+		"tailwindcss": "^4.2.0"
 	}
 }
