--- a/package.json
+++ b/package.json
@@ -15,13 +15,23 @@
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.50.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"@types/papaparse": "^5.5.2",
+		"@types/pg": "^8.16.0",
 		"svelte": "^5.51.0",
 		"svelte-check": "^4.3.6",
 		"typescript": "^5.9.3",
 		"vite": "^7.3.1"
 	},
 	"dependencies": {
+		"@prisma/adapter-pg": "^7.4.1",
+		"@prisma/client": "^7.4.1",
+		"@sveltejs/adapter-node": "^5.5.3",
 		"@tailwindcss/vite": "^4.2.0",
+		"dotenv": "^17.3.1",
+		"papaparse": "^5.5.3",
+		"pg": "^8.18.0",
+		"prisma": "^7.4.1",
+		"svelte-french-toast": "^1.2.0",
 		"tailwindcss": "^4.2.0"
 	}
 }
