--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
 		"@types/pg": "^8.16.0",
 		"svelte": "^5.51.0",
 		"svelte-check": "^4.3.6",
+		"tsx": "^4.21.0",
 		"typescript": "^5.9.3",
 		"vite": "^7.3.1"
+	},
+	"prisma": {
+		"seed": "npx tsx prisma/seed.ts"
 	},
 	"dependencies": {
 		"@prisma/adapter-pg": "^7.4.1",
